button align fix

--- a/style.css
+++ b/style.css
@@ -103,6 +103,8 @@ body {
 }
 
 .input-submit {
+	display: block;
+	margin: 0 auto;
 	width: 75px;
 	height: 25px;
 	border: 1px solid black;
